# techtenstein-seo-mcp

./: README.md  mcp-server.json  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml
techtenstein_seo_mcp/: __init__.py
